# strike-api

./: .readthedocs.yaml  README.md  accounts.py  events.py  invoices.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml  test.yaml
docs/: conf.py  index.rst  modules.rst  requirements.txt  strike_api.models.rst  strike_api.rst
examples/rates/: README.md  rates_example.py
src/: base.py
src/strike-api/: rates.py
src/strike_api/: subscriptions.py
strike_api/: accounts.py  base.py  events.py  invoices.py  rates.py  subscriptions.py
strike_api/models/: accounts.py  errors.py  events.py  generic.py  invoices.py  quotes.py  rates.py  subscriptions.py
tests/: conftest.py  test_accounts.py  test_base.py  test_events.py  test_invoices.py  test_rates.py  test_subscriptions.py
tests/cassettes/test_accounts/: test_get_account_by_handle.yaml  test_get_account_by_id.yaml  test_get_account_by_id_not_found.yaml
tests/cassettes/test_events/: test_get_event.yaml  test_get_event_not_found.yaml  test_get_events.yaml
tests/cassettes/test_invoices/: test_cancel_invoice_not_found.yaml  test_get_invoice_not_found.yaml  test_get_invoices.yaml  test_issue_invoice.yaml  test_issue_invoice_for_handle.yaml  test_issue_quote.yaml
tests/cassettes/test_rates/: test_get_ticker.yaml
tests/cassettes/test_subscriptions/: test_create_subscription.yaml  test_delete_subscription.yaml  test_get_subscription.yaml  test_get_subscriptions.yaml  test_update_subscription.yaml
