[tool.poetry]
name = "strike-api"
version = "0.1.1"
description = ""
authors = ["Thomas Cross <tom.bz2@gmail.com>"]
readme = "README.md"
packages = [{include = "strike_api"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
